--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       - "5000:5000"
     environment:
       - FLASK_ENV=development
-      - API_KEY=${API_KEY}
+      - APIKEY=${APIKEY}
       - GITHUB_TOKEN=${GITHUB_TOKEN}
       - FTP_HOST=${FTP_HOST}
       - FTP_USER=${FTP_USER}
