--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
-  app:
+  ftpclient:
     build: .
+    container_name: ftpclient
     ports:
       - "5000:5000"
     environment:
@@ -12,3 +13,10 @@ services:
       - FTP_PASSWORD=${FTP_PASSWORD}
     volumes:
       - .:/app
+    networks:
+      - devopsio
+
+networks:
+  devopsio:
+    name: devopsio
+    external: true
